ТЗ №7, правки в коде.